# spain-energy-lakehouse

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
adf/: README.md
databricks/: README.md
docs/: architecture.md  cost-tracking.md
docs/adr/: 0001-medallion-on-azure-databricks.md  0002-cost-strategy-free-tiers.md
docs/plan/: README.md  phase-a-adf-ingestion.md  phase-b-databricks-medallion.md  phase-c-gold-powerbi.md  phase-d-cicd-environments.md  phase-e1-streaming-kafka.md  phase-e2-ml-forecasting.md  phase-e3-weather-enrichment.md  phase-e4-dbt-warehouse.md
infra/terraform/: main.tf  variables.tf  versions.tf
infra/terraform/environments/: dev.tfvars
src/energy_lakehouse/: __init__.py
streaming/: README.md
tests/: test_package.py
